service/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex-url-1 
  namespace: default
spec:
  type: ExternalName
  externalName: sysnet4admin.github.io # changable as you want 


# kubectl run net --image=sysnet4admin/net-tools-ifn
# kubectl exec -it net -- /bin/bash
# container) nslookup ex-url-1 --> sysnet4admin.github.io 
# --> ex-url-1 이라는 주소를 치면 externalName으로 redirect 시켜줌.
